# Slender2DEngine

./: .gitignore  CMakeLists.txt  README.md
headers/: FileUtility.h
headers/Core/: Framework.h
headers/Core/Event/: PostSubscribeEvent.h
headers/Game/: GameLoop.h
headers/Utility/: FileUtility.h  IdDispatcher.h
src/: FileUtility.cpp
src/Core/: Framework.cpp
src/Core/Event/: PostSubscribeEvent.cpp
src/Game/: GameLoop.cpp
src/Utility/: FileUtility.cpp
tests/: FileUtilityTest.cpp  PublisherSubscriberTest.cpp
